[gd_scene load_steps=4 format=3 uid="uid://inmwvi38asm0"]

[ext_resource type="Script" path="res://scenes/3rd_Person_Controller_TD_Ortho/CAMERA_RIG_3rd_Person_Controller_TD_Orth.gd" id="1_rxxux"]
[ext_resource type="Shader" path="res://shaders/forground_shader.gdshader" id="2_l728l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y556q"]
shader = ExtResource("2_l728l")
shader_parameter/MULTIPLIER = 0.91
shader_parameter/SCALE = 0.195
shader_parameter/SOFTNESS = 0.565
shader_parameter/BASE_OPACITY = 1.42

[node name="CAMERA_RIG_3rd_Person_Controller_TD_Orth" type="Node3D"]
script = ExtResource("1_rxxux")

[node name="base_cam" type="Camera3D" parent="."]
cull_mask = 1047552

[node name="background_viewport_container" type="SubViewportContainer" parent="base_cam"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_viewport" type="SubViewport" parent="base_cam/background_viewport_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="background_camera" type="Camera3D" parent="base_cam/background_viewport_container/background_viewport"]
cull_mask = 1047553

[node name="forground_viewport_container" type="SubViewportContainer" parent="base_cam"]
material = SubResource("ShaderMaterial_y556q")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="forground_viewport" type="SubViewport" parent="base_cam/forground_viewport_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="forground_camera" type="Camera3D" parent="base_cam/forground_viewport_container/forground_viewport"]
cull_mask = 1047554
